After hours of unsuccessful research on BUG#2826 "Seconds behind master weirdness" (sometimes this column of SHOW SLAVE STATUS shows a very big value, in fact a small negative number casted to ulonglong). This problem was reported by only one user, but which uses synchronized time between his servers. As suggested by the user, to hide this I display max(0, the value) so that it will be less confusing. For a user, seeing 0 is probably better than seeing -1 (both tell you that the slave is very close to the master).

sql/slave.cc:
  Don't display a negative Seconds_Behind_Master in SHOW SLAVE STATUS.